fix z-index

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -116,6 +116,7 @@ a {
     bottom: 0;
     left: 0;
     width: 100%;
+    z-index: 1;
 
     &:first-child {
       margin-top: -1px;
