--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ a:hover {
   bottom: 0;
   left: 0;
   width: 100%;
+  z-index: 1;
 }
 .fencing-devider:first-child {
   margin-top: -1px;
